--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ইকমার্স সাইট</title>
+  <title>পন্যপুর হোম</title>
+  <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,8 +13,10 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <a href="index.html">ইকমার্স</a>
-        </div>
+          <a href="index.html">
+            <img src="assets/ponnopur-logo.png" height="40">
+          </a>
+        </div>        
         <nav class="main-nav">
           <ul>
             <li><a href="index.html">হোম</a></li>
@@ -44,8 +47,8 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>আমাদের ইকমার্স সাইট</h1>
-        <p>সেরা পণ্য, সেরা মূল্যে</p>
+        <h1>পণ্যপুর</h1>
+        <p>পণ্যের রাজ্যে আপনাকে স্বাগতম</p>
         <a href="products.html" class="btn primary-btn">এখনই কেনাকাটা শুরু করুন</a>
       </div>
     </section>
@@ -94,7 +97,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; <span id="current-year"></span> ইকমার্স সাইট। সর্বস্বত্ব সংরক্ষিত।</p>
+      <p>&copy; <span id="current-year"></span> পণ্যপুর। সর্বস্বত্ব সংরক্ষিত।</p>
     </div>
   </footer>
 
